--- a/zh-cn/home3/中兴F50玩机.md
+++ b/zh-cn/home3/中兴F50玩机.md
@@ -1,5 +1,7 @@
 # 中兴F50玩机记录
 
+<img src="./assets/1699838207990.jpeg" alt="img" style="zoom:50%;" />
+
 ## 思考日记
 
 1.  第一次接触随身WiFi
@@ -11,16 +13,18 @@
 7.  2025年1月25日，明天开始年假，跑高速带着，4个小时导航音乐都稳定，有点大材小用的感觉。
 8.  2025年2月5日，年假结束。开ADB模式，进入Android系统，是原生纯净版系统。玩法非常多，先安装短信短发器。
 9.  2025年2月5日，
-   1. 加个便携屏不就是5G Pad吗？刷个电视盒子不就是5G 移动电视盒子吗？还可刷个Android NAS？
-   4. 二手的5G手机岂不是玩法更多，功能更全，价格更香？毕竟它出门还得挂个“尿袋”。
+   1. ~~加个便携屏不就是5G Pad吗？刷个电视盒子不就是5G 移动电视盒子吗？还可刷个Android NAS？~~
+   4. ~~二手的5G手机岂不是玩法更多，功能更全，价格更香？毕竟它出门还得挂个“尿袋”。~~
    5. 有空把F50的固件备份下来（中兴定制了一些系统的软件包），然后刷入天翼一号，改造手机。
 10.  2025年2月12日，提取了一些中兴开发的apk，但还是想想怎么把固件提取出来吧。
-11.  2025年2月13日，F50的C口应该是 全功能C口吧，想搞个拓展坞。
-12.  
+11.  2025年2月13日，F50的C口应该是 全功能C口吧，想搞个拓展坞。~~加装个外置天线会不会有助于网速？~~
+12.  2025年2月17日，需要boot.img，提取还需要root权限，整不了了。
 
 ## 购买建议
 
 不差钱的：整；差钱的：等。
+
+<img src="./assets/1699838210962.jpeg" alt="img" style="zoom:50%;" />
 
 ## 设备简介
 
@@ -237,11 +241,22 @@ drwxr-xr-x 3 root root 75 2024-12-09 23:16 zdmDaemon_install
 MU300:/system/priv-app $
 ```
 
-## 2、捡漏二手5G手机改散热和wifi天线
+## 2、改散热和wifi天线
 
+### 先改散热
 
+一切为了小巧，采用紫铜板被动散热模式。但是，我感觉可以尝试改装内置主动散热模式。
 
-## 3、刷机
+### ~~改天线~~
 
+中兴F50集成了 5G Sub-6 GHz NSA&SA芯片。
 
+> NSA和SA指的是5G的两种组网模式，NSA需要依附在现有4G网络上，而SA是5G独立组网，知乎上一搜一大堆，这里就不详说。
+>
+> Sub-6G和毫米波指的是5G使用的频率，sub-6G指的是6Ghz以下的频率。
 
+拉倒吧，意义不大。
+
+## 3、刷机备份
+
+...
