--- a/zh-cn/home3/中兴F50玩机.md
+++ b/zh-cn/home3/中兴F50玩机.md
@@ -1,4 +1,4 @@
-# 中兴F50玩机记录
+# 中兴F50玩机日记
 
 <img src="./assets/1699838207990.jpeg" alt="img" style="zoom:50%;" />
 
@@ -11,14 +11,15 @@
 5.  2025年1月22日，同款芯片手机包括中兴远航系列、畅行系列，努比亚小牛，朵唯等（紫光展锐T770天翼一号2022）。低端机市场。
 6.  2025年1月24日，测速效果一般。有网友改装了WiFi发射天线，F50自身WiFi 5效果确实不咋地，可以考虑接上Wifi 6设备。
 7.  2025年1月25日，明天开始年假，跑高速带着，4个小时导航音乐都稳定，有点大材小用的感觉。
-8.  2025年2月5日，年假结束。开ADB模式，进入Android系统，是原生纯净版系统。玩法非常多，先安装短信短发器。
+8.  2025年2月5日，年假结束。开ADB模式，进入Android系统，是原生13系统。玩法非常多，先安装短信转发器。
 9.  2025年2月5日，
    1. ~~加个便携屏不就是5G Pad吗？刷个电视盒子不就是5G 移动电视盒子吗？还可刷个Android NAS？~~
    4. ~~二手的5G手机岂不是玩法更多，功能更全，价格更香？毕竟它出门还得挂个“尿袋”。~~
    5. 有空把F50的固件备份下来（中兴定制了一些系统的软件包），然后刷入天翼一号，改造手机。
 10.  2025年2月12日，提取了一些中兴开发的apk，但还是想想怎么把固件提取出来吧。
-11.  2025年2月13日，F50的C口应该是 全功能C口吧，想搞个拓展坞。~~加装个外置天线会不会有助于网速？~~
+11.  2025年2月13日，F50的C口应该是usb3.1，想搞个拓展坞。~~加装个外置天线会不会有助于网速？~~
 12.  2025年2月17日，需要boot.img，提取还需要root权限，整不了了。
+13.  2025年2月19日，谁能把原生系统rom提取出来啊？
 
 ## 购买建议
 
@@ -258,5 +259,7 @@ MU300:/system/priv-app $
 拉倒吧，意义不大。
 
 ## 3、刷机备份
+
+不会，谁会教教我，我需要boot.img
 
 ...
