--- a/zh-cn/home3/中兴F50玩机.md
+++ b/zh-cn/home3/中兴F50玩机.md
@@ -1,6 +1,6 @@
 # 中兴F50玩机日记
 
-<img src="./assets/1699838207990.jpeg" alt="img" style="zoom:50%;" />
+![1699838207990](./assets/1699838207990.jpeg)
 
 ## 思考日记
 
@@ -25,7 +25,7 @@
 
 不差钱的：整；差钱的：等。
 
-<img src="./assets/1699838210962.jpeg" alt="img" style="zoom:50%;" />
+<img src="./assets/1699838210962.jpeg" alt="1699838210962" style="zoom:50%;" />
 
 ## 设备简介
 
