--- a/zh-cn/home3/中兴F50玩机.md
+++ b/zh-cn/home3/中兴F50玩机.md
@@ -21,21 +21,23 @@
 12.  2025年2月17日，需要boot.img，提取还需要root权限，整不了了。
 13.  2025年2月19日，谁能把原生系统rom提取出来啊？
 
-## 购买建议
-
-不差钱的：整；差钱的：等。
+# 设备简介
 
 <img src="./assets/1699838210962.jpeg" alt="1699838210962" style="zoom:50%;" />
 
-## 设备简介
+​	中兴F50 5G随身WiFi是一款由中兴通讯推出的超薄便携式5G网络设备，以其小巧精致的设计和强大的网络性能受到广泛关注。其最大的亮点之一是采用了国产芯片方案，展现了国内半导体产业的进步。以下是关于中兴F50 5G随身WiFi及其国产芯片的详细介绍：
 
-### 采用**紫光展锐T760**的国产5G芯片方案，具备续航和性能更加均衡的5G移动平台。
+## 1. **国产芯片方案**
+
+​	中兴F50 5G随身WiFi的核心芯片采用了紫光展锐的第二代5G SoC——**UMS9620**（唐古拉T770），这是一款基于6nm工艺制程的5G芯片，支持2G到5G多模全网通，并集成了4.8 TOPS算力的AI功能。相比上一代产品，其在5G数据场景下的功耗降低了35%，待机功耗降低了15%，整体性能略优于高通骁龙765G。
+
+
 
 <img src="./assets/ChMkK2ZLGLeIIwvTAAJh_MfI9RcAAeVzgPk2CMAAmIU299.jpg" alt="展锐T760" style="zoom: 50%;" />
 
 
 
-### 搭载Android 13系统
+## 2. 搭载Android 13系统
 
 <img src="https://developer.android.google.cn/static/images/lockups/android-stacked.svg?hl=zh-cn" alt="img" style="zoom:25%;" />
 
@@ -45,34 +47,42 @@
 
 ![image-20250205144146998](./assets/image-20250205144146998.png)
 
-## 参考
+## 2. **性能与功能**
 
-[中兴F50 5G随身WiFi – 中兴手机官网](https://www.ztedevices.com/cn/product/zte-f50-5g-ufi/)
+- **网络支持**：支持SA+NSA双模5G网络和Sub-6GHz频段，峰值下载速率可达1.6 Gbps，上传速率可达225 Mbps，能够满足高清视频、在线游戏等高带宽需求。
+- **多设备连接**：内置高性能八核处理器，支持最多10台设备同时连接，适合家庭、团队或户外场景使用。
+- **便携设计**：机身尺寸仅为78.7mm*62.8mm*10.3mm，重量约50g，采用卡片式设计，方便随身携带。
+- **多功能扩展**：支持TF卡扩展存储（最大2TB），并可作为读卡器使用，实现一机多用。
+
+## 3. 参数
+
+​	中兴F50的国产芯片方案不仅降低了对外部供应链的依赖，还推动了国内半导体产业的发展。紫光展锐的5G SoC、WiFi/BT芯片、射频收发器等核心部件的应用，标志着国产芯片在5G通信领域的全面突破。
+
+​	官网：[中兴F50 5G随身WiFi – 中兴手机官网](https://www.ztedevices.com/cn/product/zte-f50-5g-ufi/)
 
 ![image-20250205163128153](./assets/image-20250205163128153.png)
 
-[中兴5G随身WiFi拆解：国产芯成为当之为愧的主角-机友交流专区-IoT行业资讯-机智云](https://club.gizwits.com/thread-170088-1-1.html)
+![](https://club.gizwits.com/data/attachment/forum/202407/04/173303rmm1m9m6w61i39m5.png)
 
-<iframe
-  src="https://club.gizwits.com/thread-170088-1-1.html"
-  allowfullscreen="allowfullscreen"
-  width="100%"
-  height="800"
-  scrolling="yes"
->
-</iframe>
+​	参考：[中兴5G随身WiFi拆解：国产芯成为当之为愧的主角-机友交流专区-IoT行业资讯-机智云](https://club.gizwits.com/thread-170088-1-1.html)
+
+## 4. **用户体验**
+
+- **高速稳定**：在实际测试中，中兴F50的下载速率可达300~500 Mbps，延迟低，适合户外直播、游戏和4K视频播放。
+- **低功耗设计**：得益于国产芯片的优化，设备在长时间使用中发热量低，稳定性表现优异。
+- **资费优势**：支持超大流量套餐，性价比高。
 
 # 初阶玩法
 
 锁频段，锁小区，开启性能模式。
 
-## 1、开启性能模式
+## 1. 开启性能模式
 
 打开隐藏项: [5G Mobile Hotspot performance_mode](http://192.168.0.1/index.html#performance_mode)
 
 ![image-20250205094120690](./assets/image-20250205094120690.png)
 
-## 2、硬件升级
+## 2. 硬件升级
 
 网购各种大神配套的扩展模块，扩展版来物理升级。如改造散热、加装天线、扩展接口....
 
@@ -82,13 +92,13 @@
 
 **所以通过投屏和安装应用，就实现了上给电脑共享wifi的同时，又获得了一部5G手机。**
 
-## 1、开启USB端口
+## 1. 开启USB端口
 
 打开隐藏项: [5G Mobile Hotspot usb_port](http://192.168.0.1/index.html#usb_port)
 
 ![image-20250205094959488](./assets/image-20250205094959488.png)
 
-## 2、安装投屏scrcpy
+## 2. 安装投屏scrcpy
 
 - GitHub下载：scrcpy-win64-v3.1
 
@@ -112,7 +122,7 @@ scrcpy-win64-v3.1> .\scrcpy.exe
 
 ![image-20250205103448806](./assets/image-20250205103448806.png)
 
-## 3、开始usb调试和无线调试
+## 3. 开始usb调试和无线调试
 
 ![image-20250205103605382](./assets/image-20250205103605382.png)
 
@@ -120,7 +130,7 @@ scrcpy-win64-v3.1> .\scrcpy.exe
 
 error：试了试无线投屏，结果失败了。（继续usb线连吧，懒得折腾...）
 
-## 4、安装SmsForwarder-短信转发器
+## 4. 安装SmsForwarder-短信转发器
 
 官网地址：https://github.com/pppscn/SmsForwarder
 
@@ -142,13 +152,13 @@ error：试了试无线投屏，结果失败了。（继续usb线连吧，懒得
 
 测试结果：成功收到验证码。
 
-## 5、安装任意Android软件&Root刷机
+## 5. 安装任意Android软件&Root刷机
 
 ![image-20250205145151327](./assets/image-20250205145151327.png)
 
 # 进阶玩法
 
-## 1、提取并备份F50固件和中兴apk
+## 1. 提取并备份F50固件和中兴apk
 
 ### 进入adb模式
 
@@ -242,7 +252,7 @@ drwxr-xr-x 3 root root 75 2024-12-09 23:16 zdmDaemon_install
 MU300:/system/priv-app $
 ```
 
-## 2、改散热和wifi天线
+## 2. 改散热和wifi天线
 
 ### 先改散热
 
@@ -258,7 +268,7 @@ MU300:/system/priv-app $
 
 拉倒吧，意义不大。
 
-## 3、刷机备份
+## 3. 刷机备份
 
 不会，谁会教教我，我需要boot.img
 
