--- a/zh-cn/home3/中兴F50玩机.md
+++ b/zh-cn/home3/中兴F50玩机.md
@@ -74,8 +74,6 @@
 
 # 初阶玩法
 
-锁频段，锁小区，开启性能模式。
-
 ## 1. 开启性能模式
 
 打开隐藏项: [5G Mobile Hotspot performance_mode](http://192.168.0.1/index.html#performance_mode)
@@ -100,13 +98,14 @@
 
 ## 2. 安装投屏scrcpy
 
-- GitHub下载：scrcpy-win64-v3.1
+- GitHub下载：scrcpy-win64-v3.1[Releases · Genymobile/scrcpy](https://github.com/Genymobile/scrcpy/releases/)
 
 - 安装好后，开始尝试投屏手机，列一下步骤
 
 - 有线连接电脑跟手机，投屏方式：
 
 ```bat
+# 0、投屏软件目录下打开控制台
 # 1、打开手机的开发者模式
 scrcpy-win64-v3.1> adb shell settings put global development_settings_enabled 1
 # 2、确保手机与电脑usb连接，可以通过下面命令查看是否连接成功：
@@ -117,7 +116,7 @@ List of devices attached
 32024686***   device
 # 3、开始投屏
 scrcpy-win64-v3.1> .\scrcpy.exe
-# 4、结束投屏，中断命令即可
+# 4、如果结束投屏，中断命令即可
 ```
 
 ![image-20250205103448806](./assets/image-20250205103448806.png)
